# io

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  epoll-stress-logs.tgz  iouring-stress-logs.tgz
.github/: copilot-instructions.md
.github/workflows/: ci.yml  posix-stress.yml  release.yml  solaris-ssh.yml  solaris.yml  windows-mingw-stress.yml  windows-selfhosted.yml
cmake/: ioConfig.cmake.in
docs/: CONTEXT.md  context.json  solaris.md
examples/: client.cpp  server.cpp
include/io/: io.hpp  net.hpp  socket_t.hpp
scripts/: bench_eps.sh  stress_local_highload.sh  stress_matrix.sh
scripts/linux/: .env  .env.example  linux_build.sh  linux_configure.sh  linux_ctest_list.sh  linux_parallel_and_stress.sh  linux_run_examples.sh  linux_stress_highload.sh  linux_sync.sh  linux_test.sh  linux_test_one.sh
scripts/remote/: .env  .env.example  README.md  all.sh  linux_bench_eps.sh  linux_run.sh  solaris_run.sh  windows_run.sh
scripts/solaris/: .env  .env.example  solaris_bench_eps.sh  solaris_build.sh  solaris_configure.sh  solaris_ctest_list.sh  solaris_gdb.sh  solaris_parallel_and_stress.sh  solaris_run_examples.sh  solaris_stress_highload.sh  solaris_sync.sh  solaris_test.sh  solaris_test_one.sh
scripts/windows/: .env  windows_bootstrap_msys2.sh  windows_build_remote.sh  windows_ctest_remote.sh  windows_stop_watcher.sh  windows_sync.sh  windows_watch_remote.sh
scripts/windows/msys2/: build.bat  build.sh  watch_build.bat  watch_build.sh
src/: io.cpp  main.cpp  net_common.cpp  net_devpoll.cpp  net_epoll.cpp  net_eventports.cpp  net_factory.cpp  net_iocp.cpp  net_iocp_stub.cpp  net_iouring.cpp  net_kqueue.cpp
tests/: io_linux_metrics_tests.cpp  io_tests.cpp  io_win_accept_rw_tests.cpp  io_win_async_connect_tests.cpp  io_win_iocp_integration.cpp  io_win_iocp_smoke.cpp  io_win_iocp_stress.cpp  io_win_metrics_tests.cpp  io_win_pause_resume_tests.cpp  io_win_read_timeout_tests.cpp  io_win_user_event_tests.cpp  net_egain_partial_write_tests.cpp  net_eps_benchmark_tests.cpp  net_highload_tests.cpp  net_instant_connect_tests.cpp  net_integration_tests.cpp  net_limits_tests.cpp  net_pause_multi_timeout_tests.cpp  net_pause_resume_server_tests.cpp  net_pause_resume_tests.cpp  net_timeout_pause_tests.cpp  net_timeout_tests.cpp  net_write_closed_tests.cpp
tools/: gen_dataset.cpp
